<resources>
    <string name="app_name">Beginner</string>
    <string name="open">Open drawer</string>
    <string name="close">Close Drawer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="name"> Name</string>
    <string name="password"> Password</string>
    <string name="confirm_password"> Confirm Password</string>
    <string name="email"> Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="noMatch">Password does not match</string>
    <string name="noEmail">Email is not valid</string>
    <string name="noPassword">Password must be at least 6 characters and contain at least 1 number, 1 uppercase, 1 lowercase and 1 special character</string>
    <string name="welcome">Welcome</string>
</resources>