<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="40dp"
    android:elevation="20dp"
    android:layout_gravity="center">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/baseline_person_2_24"
        android:hint="@string/name"
        android:background="@drawable/edittext_pill_bg"
        android:elevation="10dp"
        android:minEms="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_pill_bg"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:elevation="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minEms="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_pill_bg"
        android:drawableStart="@drawable/baseline_password_24"
        android:elevation="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minEms="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_pill_bg"
        android:drawableStart="@drawable/baseline_password_24"
        android:elevation="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minEms="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:drawableLeftCompat="@drawable/baseline_error_24" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sign_in"
        android:backgroundTint="#FFBF00"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>